# rtreach_f1tenth

./: .gitignore  Dockerfile  README.md  SimulatorDockerfile_GPU  build_docker.sh  build_rtreach.sh  run_batch.sh  run_batch_rl.sh  run_batch_worlds.sh  run_emsoft_experiments.sh  start.sh
docker/: Dockerfile  SimulatorDockerfileHeadless  SimulatorDockerfile_GPU  launch_docker_sim.sh  launch_multi_agent.sh
hardware_exp/: benchmark_experiments_ars_rtreach_track_porto_0.5_10.csv  benchmark_experiments_ars_rtreach_track_porto_0.5_25.csv  benchmark_experiments_ars_rtreach_track_porto_1.5_10.csv  benchmark_experiments_ars_rtreach_track_porto_1.5_25.csv  benchmark_experiments_e2e_image_rtreach_track_porto_1.0_10.csv  benchmark_experiments_e2e_image_rtreach_track_porto_1.5_10.csv  benchmark_experiments_e2e_image_rtreach_track_porto_1.5_25.csv  benchmark_experiments_e2e_rtreach_track_porto_0.5_10.csv  benchmark_experiments_e2e_rtreach_track_porto_0.5_25.csv  benchmark_experiments_e2e_rtreach_track_porto_1.0_25.csv  benchmark_experiments_e2e_rtreach_track_porto_1.5_10.csv  benchmark_experiments_sac_rtreach_track_porto_0.5_25.csv  benchmark_experiments_sac_rtreach_track_porto_1.0_10.csv  benchmark_experiments_sac_rtreach_track_porto_1.0_25.csv  benchmark_experiments_sac_rtreach_track_porto_1.5_10.csv  benchmark_experiments_sac_rtreach_track_porto_1.5_25.csv
ros_src/rtreach/: CMakeLists.txt  package.xml
ros_src/rtreach/benchmarking/: AnalyzeBenchmarks.ipynb  BenchmarkPlots.ipynb  benchmark_experiments.txt  e2e_hardware.csv  rl_hardware_becnhmark.csv  utils.py
ros_src/rtreach/benchmarking/benchmarking2021/: EMSOFT.ipynb
ros_src/rtreach/benchmarking/emsoft_experiments/: AnalyzeBenchmarks.ipynb  benchmark_experiments_ars_rtreach_track_porto_0.5_10.csv  benchmark_experiments_ars_rtreach_track_porto_0.5_25.csv  benchmark_experiments_ars_rtreach_track_porto_1.0_10.csv  benchmark_experiments_ars_rtreach_track_porto_1.0_25.csv  benchmark_experiments_ars_rtreach_track_porto_1.5_10.csv  benchmark_experiments_ars_rtreach_track_porto_1.5_25.csv  benchmark_experiments_e2e_image_rtreach_track_porto_0.5_10.csv  benchmark_experiments_e2e_image_rtreach_track_porto_0.5_25.csv  benchmark_experiments_e2e_image_rtreach_track_porto_1.0_25.csv  benchmark_experiments_e2e_rtreach_track_porto_1.0_10.csv  benchmark_experiments_e2e_rtreach_track_porto_1.5_25.csv  benchmark_experiments_sac_rtreach_track_porto_0.5_10.csv
ros_src/rtreach/benchmarking/emsoft_experiments/hardware_experiments/ars_1.0_25/: benchmark_experiments0704202118_17_50.csv  benchmark_experiments0704202118_19_36.csv  benchmark_experiments0704202118_20_48.csv  benchmark_experiments0704202118_22_21.csv  benchmark_experiments0704202118_24_06.csv  benchmark_experiments0704202118_25_41.csv  benchmark_experiments0704202118_27_27.csv  benchmark_hardware_experiments.csv
ros_src/rtreach/benchmarking/emsoft_experiments/hardware_experiments/vbn_1.0_25/: benchmark_experiments0704202118_31_24.csv  benchmark_experiments0704202118_33_14.csv  benchmark_experiments0704202118_34_15.csv  benchmark_experiments0704202118_39_55.csv  benchmark_experiments0704202118_40_52.csv  benchmark_hardware_experiments.csv
ros_src/rtreach/benchmarking2021/: EMSOFT.ipynb  benchmark_experiments.csv  world_analysis.ipynb
ros_src/rtreach/benchmarking2021/10ms/: benchmark_experiments_e2e_all_rtreach_track_porto_1.0.csv  benchmark_experiments_e2e_image_rtreach_track_barca_1.0.csv  benchmark_experiments_e2e_image_track_porto_1.0.csv  benchmark_experiments_sac_rtreach_track_porto_1.5.csv
ros_src/rtreach/benchmarking2021/with_obstacles/: collisions_rteach_e2e_image_rtreach_track_porto_1.5_cones.csv  collisions_rteach_e2e_rtreach_track_porto_1.5_cones.csv
ros_src/rtreach/launch/: reach.launch
ros_src/rtreach/src/: benchmarking_node.cpp  benchmarking_node_hardware.cpp  reach_node.cpp  reach_node_dynamic.cpp  reach_node_sync.cpp  vis_dynamic.cpp  vis_dynamic_param.cpp  visualize_obstacle.cpp  visualize_obstacle_particles.cpp  visualize_reachset.cpp
src/: bicycle  bicycle_dynamic_safety.c  bicycle_main.c  bicycle_model.c  bicycle_model.h  bicycle_model_parametrizeable.c  bicycle_model_plots.c  bicycle_model_vis.c  bicycle_plot  bicycle_plots_main.c  bicycle_safety.c  bicycle_safety.h  dynamics_bicycle_model.c  face_lift.h  face_lift_bicycle_dynamic.c  face_lift_bicycle_model.c  face_lift_bicycle_model_visualization.c  face_lift_obstacle.c  geometry.h  (+18 more)
